package OutputProcess;

import Graphic.GameProcess;

public class EntityProcess {
    GameProcess gp;

    public EntityProcess(GameProcess gp) {
        this.gp = gp;

    }

}
