@startuml

title __MY2DGAME's Class Diagram__\n

  namespace GameAttributeProcess {
    class GameAttributeProcess.AssetSetter {
    }
  }
  

  namespace GameAttributeProcess {
    class GameAttributeProcess.CollisionCheck {
    }
  }
  

  namespace GameAttributeProcess {
    class GameAttributeProcess.EventHandler {
    }
  }
  

  namespace GameAttributeProcess {
    class GameAttributeProcess.GameAttribute {
    }
  }
  

  namespace GameAttributeProcess {
    class GameAttributeProcess.KeyHandler {
    }
  }
  

  namespace GameLogic {
    class GameLogic.PathFinder {
    }
  }
  

  namespace Graphic {
    class Graphic.GameProcess {
    }
  }
  

  namespace Graphic {
    class Graphic.UI {
    }
  }
  

  namespace ImgProcess {
    class ImgProcess.EntityProcess {
    }
  }
  

  namespace ImgProcess {
    class ImgProcess.MobProcess {
    }
  }
  

  namespace ImgProcess {
    class ImgProcess.NpcProcess {
    }
  }
  

  namespace ImgProcess {
    class ImgProcess.ObjectProcess {
    }
  }
  

  namespace ImgProcess {
    class ImgProcess.PlayerProcess {
    }
  }
  

  namespace ImgProcess {
    class ImgProcess.UtilityTool {
    }
  }
  

  namespace entity {
    class entity.Entity {
    }
  }
  

  namespace entity {
    class entity.Mob {
    }
  }
  

  namespace entity {
    class entity.NPC {
    }
  }
  

  namespace entity {
    class entity.Player {
    }
  }
  

  namespace main {
    class main.Main {
    }
  }
  

  namespace map {
    class map.Map {
    }
  }
  

  namespace object {
    class object.Inventory {
    }
  }
  

  namespace object {
    class object.SuperObject {
    }
  }
  

  namespace tile {
    class tile.Tile {
    }
  }
  

  namespace tile {
    class tile.TileManager {
    }
  }
  

  GameAttributeProcess.AssetSetter o-- Graphic.GameProcess : gp
  GameAttributeProcess.CollisionCheck o-- Graphic.GameProcess : gp
  GameAttributeProcess.EventHandler o-- Graphic.GameProcess : gp
  GameAttributeProcess.GameAttribute o-- GameAttributeProcess.GameAttribute.GameState : gameState
  GameAttributeProcess.GameAttribute o-- GameAttributeProcess.AssetSetter : aSetter
  GameAttributeProcess.GameAttribute o-- GameAttributeProcess.CollisionCheck : cCheck
  GameAttributeProcess.GameAttribute o-- entity.Player : player
  GameAttributeProcess.KeyHandler .up.|> java.awt.event.KeyListener
  GameAttributeProcess.KeyHandler o-- Graphic.GameProcess : gp
  GameLogic.PathFinder o-- Graphic.GameProcess : gp
  Graphic.GameProcess .up.|> java.lang.Runnable
  Graphic.GameProcess -up-|> javax.swing.JPanel
  Graphic.GameProcess o-- ImgProcess.MobProcess : MProcess
  Graphic.GameProcess o-- ImgProcess.NpcProcess : NProcess
  Graphic.GameProcess o-- ImgProcess.PlayerProcess : PProcess
  Graphic.GameProcess o-- GameAttributeProcess.GameAttribute : ga
  Graphic.GameProcess o-- GameAttributeProcess.GameAttribute.GameState : gameState
  Graphic.GameProcess o-- ImgProcess.ObjectProcess : objProcess
  Graphic.GameProcess o-- tile.TileManager : tileM
  Graphic.GameProcess o-- GameAttributeProcess.KeyHandler : keyH1
  Graphic.GameProcess o-- Graphic.UI : ui
  Graphic.UI o-- Graphic.GameProcess : gp
  ImgProcess.EntityProcess o-- Graphic.GameProcess : gp
  ImgProcess.MobProcess -up-|> ImgProcess.EntityProcess
  ImgProcess.NpcProcess -up-|> ImgProcess.EntityProcess
  ImgProcess.ObjectProcess o-- Graphic.GameProcess : gp
  ImgProcess.PlayerProcess -up-|> ImgProcess.EntityProcess
  ImgProcess.PlayerProcess o-- GameAttributeProcess.KeyHandler : keyH
  ImgProcess.PlayerProcess o-- entity.Player : player
  entity.Mob -up-|> entity.Entity
  entity.NPC -up-|> entity.Entity
  entity.Player -up-|> entity.Entity
  entity.Player o-- ImgProcess.PlayerProcess : PProcess
  entity.Player o-- entity.Player.State : state
  tile.TileManager o-- Graphic.GameProcess : gp


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
